@@ -37,37 +37,28 @@ public class ExamTermServiceImpl implements ExamTermService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<ExamTermDto> list(Long schoolId) {
+    public List<ExamTermDto> list(Long headOfficeId, Long schoolId) {
         CurrentUser user = CurrentUserHolder.get();
         if (user == null) throw new ForbiddenException();
 
-        if (user.isSuperAdmin() && schoolId == null) {
-            return examTermRepository.findAllByOrderByIdDesc().stream().map(this::toDto).collect(Collectors.toList());
-        }
-
-        Long effectiveSchoolId = effectiveSchoolIdForRead(user, schoolId);
-        return examTermRepository.findBySchoolIdOrderByIdDesc(effectiveSchoolId).stream().map(this::toDto).collect(Collectors.toList());
+        return resolveVisibleRows(user, headOfficeId, schoolId).stream()
+                .map(this::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional(readOnly = true)
-    public Page<ExamTermDto> listPaginated(Long schoolId, int page, int size, String search) {
+    public Page<ExamTermDto> listPaginated(Long headOfficeId, Long schoolId, int page, int size, String search) {
         CurrentUser user = CurrentUserHolder.get();
         if (user == null) throw new ForbiddenException();
 
         Pageable pageable = PageRequest.of(page, size, Sort.by("id").descending());
         String normalizedSearch = normalizeOptional(search);
 
-        if (user.isSuperAdmin() && schoolId == null) {
-            List<ExamTermDto> rows = examTermRepository.findAllByOrderByIdDesc().stream()
-                    .map(this::toDto)
-                    .filter(dto -> normalizedSearch == null || matchesSearch(dto, normalizedSearch))
-                    .toList();
-            return slice(rows, pageable);
-        }
-
-        Long effectiveSchoolId = effectiveSchoolIdForRead(user, schoolId);
-        return examTermRepository.searchExamTerms(effectiveSchoolId, normalizedSearch, pageable).map(this::toDto);
+        List<ExamTermDto> rows = list(headOfficeId, schoolId).stream()
+                .filter(dto -> normalizedSearch == null || matchesSearch(dto, normalizedSearch))
+                .collect(Collectors.toList());
+        return slice(rows, pageable);
     }
 
     @Override
@@ -184,6 +175,50 @@ public class ExamTermServiceImpl implements ExamTermService {
     private void ensureSchoolInHeadOffice(Long schoolId, Long headOfficeId) {
         boolean ok = schoolRepository.findByIdAndIsDeletedFalseAndHeadOfficeId(schoolId, headOfficeId).isPresent();
         if (!ok) throw new NotFoundException();
+    }
+
+    private List<ExamTerm> resolveVisibleRows(CurrentUser user, Long headOfficeId, Long schoolId) {
+        if (user.isSchoolScoped()) {
+            Long effectiveSchoolId = user.schoolId();
+            if (effectiveSchoolId == null) throw new ForbiddenException();
+            if (schoolId != null && !Objects.equals(schoolId, effectiveSchoolId)) throw new ForbiddenException();
+            if (headOfficeId != null) ensureSchoolInHeadOffice(effectiveSchoolId, headOfficeId);
+            return examTermRepository.findBySchoolIdOrderByIdDesc(effectiveSchoolId);
+        }
+
+        if (schoolId != null) {
+            if (user.isHeadOfficeScopedAdmin()) ensureSchoolInHeadOffice(schoolId, user.headOfficeId());
+            return examTermRepository.findBySchoolIdOrderByIdDesc(schoolId);
+        }
+
+        if (headOfficeId != null) {
+            if (user.isHeadOfficeScopedAdmin() && !Objects.equals(headOfficeId, user.headOfficeId())) {
+                throw new ForbiddenException();
+            }
+            return examTermRepository.findAllByOrderByIdDesc().stream()
+                    .filter(row -> Objects.equals(resolveSchoolHeadOfficeId(row.getSchoolId()), headOfficeId))
+                    .collect(Collectors.toList());
+        }
+
+        if (user.isHeadOfficeScopedAdmin()) {
+            Long effectiveHeadOfficeId = user.headOfficeId();
+            return examTermRepository.findAllByOrderByIdDesc().stream()
+                    .filter(row -> Objects.equals(resolveSchoolHeadOfficeId(row.getSchoolId()), effectiveHeadOfficeId))
+                    .collect(Collectors.toList());
+        }
+
+        if (user.isSuperAdmin()) {
+            return examTermRepository.findAllByOrderByIdDesc();
+        }
+
+        throw new BadRequestException("schoolId is required");
+    }
+
+    private Long resolveSchoolHeadOfficeId(Long schoolId) {
+        if (schoolId == null) return null;
+        return schoolRepository.findByIdAndIsDeletedFalse(schoolId)
+                .map(ManageSchool::getHeadOfficeId)
+                .orElse(null);
     }
 
     private ExamTermDto toDto(ExamTerm entity) {
